testsuite/gsksl/errors/unknown-preprocessor-directive.glsl

#unkunownpreprocessordirective

void
main ()
{
  int x = 1;
}
